--- a/BlogWeb/Views/Shared/_Layout.cshtml
+++ b/BlogWeb/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="Index">Home</a>
                         </li>
                         <li class=" nav-item btn-green">
-                            <a class="nav-link" asp-area="" asp-controller="Portfolio" asp-action="Privacy">Portfolio</a>
+                            <a target="_blank" class="nav-link" href="https://www.davisjimmie.com">Portfolio</a>
                         </li>
                     </ul>
                 </div>
